# guessit

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
core/: CMakeLists.txt
core/src/: error.hpp  gradebook.cpp  gradebook.hpp  gradebook_io.cpp  gradebook_io.hpp  grades.cpp  grades.hpp  ranking.cpp  ranking.hpp  stats.cpp  stats.hpp  student.hpp
